--- a/CSS/index.css
+++ b/CSS/index.css
@@ -5,5 +5,49 @@ html,body{
 footer{
     background-color: rgba(58, 255, 184, 1);
     height: 250px;
+    font-family: "JetBrains Mono", monospace;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+}
+.contact-button{
+    cursor: pointer;
+    font-size: 175%;
+    font-family: "JetBrains Mono", monospace;
+}
+.social-media{
+    font-size: 175%;
+    font-family: "JetBrains Mono", monospace;
+}
+.hold-footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 70px;
+}
+.hold-images{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+}
+.hold-div-2{
     
+}
+
+.tumblr-logo{
+    width: 60px;
+    height: 60px;
+}
+.pinterest-logo{
+    width: 60px;
+    height: 60px;
+}
+.instagram-logo{
+    width: 60px;
+    height: 60px;
+}
+.youtube-logo{
+    width: 60px;
+    height: 60px;
 }
