--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,9 +1,87 @@
 html,body{
     padding: 0px;
     margin: 0px;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    height: 100%;
 }
+
+/*****************************************************************************************************/
+.background-image {
+    background-image: url(https://th.bing.com/th/id/R.1a57565e1a8f2b2bdeb899723310ae81?rik=UQmcqSAXD%2fP1LQ&riu=http%3a%2f%2ftravelfore.com%2fwp-content%2fuploads%2f2016%2f04%2fbali.jpg&ehk=v9y0vodV%2bGS1smYLfGV3NX%2fWPGkODQaRrgUDcthpyZ0%3d&risl=&pid=ImgRaw&r=0);
+    background-size: cover; /* Adjusts the size of the image */
+    background-repeat: no-repeat; /* Prevents the image from repeating */
+    background-position: center; /* Centers the image */
+    background-attachment: fixed; /* Fixes the image so it doesn't scroll with the content */
+    min-height: 100%;
+}
+/*****************************************************************************************************/
+/*header*/
+header {
+    background-color: #8AA29E;
+    height: 140px;
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    box-shadow: 0 0 25px 0 black;
+    border-bottom: 5px solid black;
+}
+
+.epic-vacations-logo {
+    font-family: "Poetsen One", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    color: white;
+    font-size: 48px;
+}
+
+nav {
+    gap: 10%;
+}
+
+.header-btn {
+    font-family: "JetBrains Mono", monospace;
+    text-decoration: none;
+    font-size: 32px;
+    margin: 25px;
+}
+
+.nav-color {
+    color: white;
+    transition: all 0.8s;
+}
+
+.nav-color:hover {
+    color: #393e3d;
+    transition:  0.8s
+}
+
+.btn-backgrnd {
+    background-color: white;
+    height: 77px;
+    width: 155px;
+    border-radius: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+}
+
+.login-color {
+    color: #8AA29E;
+    transition: all 0.8s;
+}
+
+.login-color:hover {
+    color: #dbede9;
+    transition:  0.8s
+}
+/*****************************************************************************************************/
+/*footer*/
 footer{
     background-color: rgba(58, 255, 184, 1);
+    height: 250px;
     font-family: "JetBrains Mono", monospace;
     justify-content: center;
     align-items: center;
@@ -16,61 +94,41 @@ footer{
 }
 .contact-button{
     cursor: pointer;
-    font-size: 175%;
-    font-family: "JetBrains Mono", monospace;
-}
-.social-media{
-    font-size: 175%;
-    font-family: "JetBrains Mono", monospace;
-}
-.hold-footer{
-    display: flex;
-    justify-content: center;
-    align-items: flex-end;
-    gap: 70px;
-    height: 40%;
-}
-.hold-images{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 30px;
-}
-.hold-div-2{
-    width: 90%;
-    height: 30%;
-    font-size: 125%;
-    font-family: "JetBrains Mono", monospace;
-    display: flex;
-	flex-direction: row;
-	flex-wrap: nowrap;
-	justify-content: space-between;
-	align-items: flex-end;
-	align-content: stretch;
-}
-.privacy{
-    display: flex;
-    width: 90px;
-    cursor: pointer;
-}
-.terms-of-service{
-    display: flex;
     width: 200px;
     cursor: pointer;
 }
+
+/*****************************************************************************************************/
 .tumblr-logo{
-    width: 60px;
-    height: 60px;
-}
-.pinterest-logo{
-    width: 60px;
-    height: 60px;
-}
-.instagram-logo{
     width: 60px;
     height: 60px;
 }
 .youtube-logo{
     width: 60px;
     height: 60px;
+}
+/*****************************************************************************************************/
+.drop-down-1{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 20%;
+    height: 500px;
+    background-color: white;
+    border-right: 5px solid black; 
+    border-left: 5px solid black; 
+    background: linear-gradient(
+        to right, 
+        hsla(0, 0%, 100%, 0.5), 
+        hsla(0, 0%, 100%, 0.5)  
+    );
+    pointer-events: none; 
+    z-index: -1;    
+}
+.hold-drop-down-1{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    height: 100%; 
 }
