--- a/CSS/index.css
+++ b/CSS/index.css
@@ -9,12 +9,19 @@ html,body{
 
 /*****************************************************************************************************/
 .background-image {
-    background-image: url(https://th.bing.com/th/id/R.1a57565e1a8f2b2bdeb899723310ae81?rik=UQmcqSAXD%2fP1LQ&riu=http%3a%2f%2ftravelfore.com%2fwp-content%2fuploads%2f2016%2f04%2fbali.jpg&ehk=v9y0vodV%2bGS1smYLfGV3NX%2fWPGkODQaRrgUDcthpyZ0%3d&risl=&pid=ImgRaw&r=0);
+    background-image: url(https://assets.mixkit.co/videos/2168/2168-720.mp41);
     background-size: cover; /* Adjusts the size of the image */
     background-repeat: no-repeat; /* Prevents the image from repeating */
     background-position: center; /* Centers the image */
     background-attachment: fixed; /* Fixes the image so it doesn't scroll with the content */
     min-height: 100%;
+}
+.video{
+    width: 100%;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
 }
 /*****************************************************************************************************/
 /*header*/
@@ -95,6 +102,44 @@ footer{
 .contact-button{
     cursor: pointer;
     width: 200px;
+}
+.hold-footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 70px;
+    height: 40%;
+    font-size: 25px;
+}
+.hold-images{
+    display: flex;
+    gap: 30px;
+}
+.hold-div-2{
+    cursor: pointer;
+    width: 90%;
+    height: 30%;
+    font-size: 125%;
+    font-family: "JetBrains Mono", monospace;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
+    display: flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	justify-content: space-between;
+	align-items: flex-end;
+	align-content: stretch;
+}
+
+.privacy{
+    display: flex;
+    width: 90px;
+}
+
+.terms-of-service{
+    display: flex;
+    width: 200px;
     cursor: pointer;
 }
 
@@ -104,6 +149,14 @@ footer{
     height: 60px;
 }
 .youtube-logo{
+    width: 60px;
+    height: 60px;
+}
+.pinterest-logo{
+    width: 60px;
+    height: 60px;
+}
+.instagram-logo{
     width: 60px;
     height: 60px;
 }
@@ -118,9 +171,11 @@ footer{
     border-right: 5px solid black; 
     border-left: 5px solid black; 
     background: linear-gradient(
-        to right, 
-        hsla(0, 0%, 100%, 0.5), 
-        hsla(0, 0%, 100%, 0.5)  
+        to top, 
+        hsla(52, 25%, 12%, 0.499), 
+        hsla(0, 35%, 42%, 0.685), 
+        hsla(189, 69%, 32%, 0.366),
+        hsla(52, 25%, 12%, 0.499)  
     );
     pointer-events: none; 
     z-index: -1;    
