--- a/CSS/index.css
+++ b/CSS/index.css
@@ -205,38 +205,80 @@ footer{
     opacity: 95%;
 }
 
-.login-introduction {
+.form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.introduction-box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.introduction-text-top {
     font-family: "Poetsen One", sans-serif;
-    font-weight: 400;
+    font-weight: 400%;
     font-style: normal;
     color: white;
-    font-size: 100px;
-    margin-bottom: -12.5%;
-    margin-left: 12.5%;
+    font-size: 600%;
+    margin: 0%;
+    margin-top: 3%;
+}
+
+.introduction-text-bottom {
+    font-family: "Poetsen One", sans-serif;
+    font-weight: 400%;
+    font-style: normal;
+    color: white;
+    font-size: 600%;
+    margin: 0%;
+    margin-bottom: 5%;
 }
 
 .email-box {
     display: flex;
-    margin-top: 15%;
-    margin-left: 12.5%;
+    margin-left: 20%;
+    margin-right: 20%;
     border: none;
     outline: none;
-    padding: 3% 23%;
+    padding: 3% 5%;
     border-radius: 30px;
     font-family: "Poetsen One", sans-serif;
     color: white;
-    font-size: 25px;
+    font-size: 160%;
 }
 
 .password-box {
     display: flex;
     margin-top: 5%;
-    margin-left: 12.5%;
+    margin-left: 20%;
+    margin-right: 20%;
     border: none;
     outline: none;
-    padding: 3% 23%;
+    padding: 3% 5%;
     border-radius: 30px;
     font-family: "Poetsen One", sans-serif;
     color: white;
-    font-size: 25px;
+    font-size: 160%;
 }
+
+.button-box {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 7%;
+}
+
+.submit-button {
+    margin-top: 3%;
+    border: none;
+    outline: none;
+    padding: 3% 9%;
+    border-radius: 30px;
+    font-family: "Poetsen One", sans-serif;
+    color: #747372;
+    font-size: 160%;
+}
+/*****************************************************************************************************/
