--- a/CSS/index.css
+++ b/CSS/index.css
@@ -23,6 +23,13 @@ html,body{
     bottom: 0;
     z-index: -1;
 }
+.video-2{
+    width: 100%;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
+    height: 50%;
+}
 /*****************************************************************************************************/
 /*header*/
 header {
@@ -237,6 +244,30 @@ footer{
     z-index: -1;    
 }
 .hold-drop-down-1{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    height: 100%; 
+}
+.drop-down-2{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+    height: 500px;
+    background-color: white;
+    border-right: 5px solid black; 
+    border-left: 5px solid black; 
+    background: linear-gradient(
+        to top, 
+        hsla(52, 25%, 12%, 0.499), 
+        hsla(0, 35%, 42%, 0.685), 
+        hsla(189, 69%, 32%, 0.366),
+        hsla(52, 25%, 12%, 0.499)  
+    );
+}
+.hold-drop-down-2{
     display: flex;
     flex-direction: column;
     align-items: center;
