--- a/CSS/index.css
+++ b/CSS/index.css
@@ -39,8 +39,6 @@ header {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    box-shadow: 0 0 25px 0 black;
-    border-bottom: 5px solid black;
 }
 
 .epic-vacations-logo {
@@ -158,8 +156,6 @@ footer{
     display: flex;
     flex-direction: column;
     min-height: 250px;
-    box-shadow: 0 0 25px 0 black;
-    border-top: 5px solid black; 
     padding: 10px;
 }
 .contact-button{
@@ -248,7 +244,7 @@ footer{
     flex-direction: column;
     align-items: center;
     width: 100%;
-    height: 100%; 
+    height: 1000px; 
 }
 .drop-down-2{
     display: flex;
