--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,36 +1,18 @@
-html,body{
-  padding: 0px;
-  margin: 0px;
-  display: flex;
-  justify-content: space-between;
-  flex-direction: column;
-  height: 100%;
+@import url("https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Satisfy&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap");
+
+* {
+  box-sizing: border-box;
+  margin: 0;
 }
 
-/*****************************************************************************************************/
-.background-image {
-  background-image: url(https://assets.mixkit.co/videos/2168/2168-720.mp41);
-  background-size: cover; /* Adjusts the size of the image */
-  background-repeat: no-repeat; /* Prevents the image from repeating */
-  background-position: center; /* Centers the image */
-  background-attachment: fixed; /* Fixes the image so it doesn't scroll with the content */
-  min-height: 100%;
+body,
+html {
+  margin: 0;
+  padding: 0;
 }
-.video{
-  width: 100%;
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  z-index: -1;
-}
-.video-2{
-  width: 100%;
-  right: 0;
-  bottom: 0;
-  z-index: -1;
-  height: 50%;
-}
-/*****************************************************************************************************/
+/***********************************************************/
 /*header*/
 header {
   background-color: #8AA29E;
@@ -39,8 +21,6 @@ header {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  box-shadow: 0 0 25px 0 black;
-  border-bottom: 5px solid black;
 }
 
 .epic-vacations-logo {
@@ -148,182 +128,436 @@ nav {
 }
 
 /*****************************************************************************************************/
-/*footer*/
-footer{
-  background-color: rgba(58, 255, 184, 1);
-  height: 250px;
-  font-family: "JetBrains Mono", monospace;
+/*------------------------Scroll Bar-----------------------*/
+::-webkit-scrollbar {
+  width: 20px;
+}
+
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #fde65e;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #fde02f;
+}
+
+/*========================Nav Bar=========================*/
+.nav-bar {
+  display: flex;
+  flex-flow: row wrap;
+  width: 100%;
+  height: 90px;
+  background-color: #fff;
+  box-shadow: 3px 3px 10px lightslategray;
+  align-items: center;
   justify-content: center;
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-  min-height: 250px;
-  box-shadow: 0 0 25px 0 black;
-  border-top: 5px solid black; 
-  padding: 10px;
-}
-.contact-button{
-  cursor: pointer;
-  width: 200px;
-}
-.hold-footer{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 70px;
-  height: 40%;
-  font-size: 25px;
-}
-.hold-images{
-  display: flex;
-  gap: 30px;
-}
-.hold-div-2{
-  cursor: pointer;
-  width: 90%;
-  height: 30%;
-  font-size: 125%;
-  font-family: "JetBrains Mono", monospace;
-  justify-content: space-between;
-  align-items: center;
-  flex-direction: row;
-  display: flex;
-flex-direction: row;
-flex-wrap: nowrap;
-justify-content: space-between;
-align-items: flex-end;
-align-content: stretch;
+  position: sticky;
+  top: 0;
+  z-index: 1;
 }
 
-.privacy{
-  display: flex;
-  width: 90px;
+.logo {
+  flex: 1;
+  font-size: 40px;
+  padding: 20px;
+  margin-left: 50px;
+  font-family: Satisfy;
 }
 
-.terms-of-service{
+ul.menu {
+  flex: 1;
   display: flex;
-  width: 200px;
-  cursor: pointer;
+  flex-flow: row wrap;
 }
 
-/*****************************************************************************************************/
-.tumblr-logo{
-  width: 60px;
-  height: 60px;
+.menu li {
+  flex: 1;
+  list-style-type: none;
+  font-size: 16px;
+  font-family: "Barlow Condensed";
+  text-align: center;
 }
-.youtube-logo{
-  width: 60px;
-  height: 60px;
+
+.menu li a {
+  text-decoration: none;
+  color: #000;
+  text-transform: uppercase;
 }
-.pinterest-logo{
-  width: 60px;
-  height: 60px;
+
+.menu li a:hover {
+  color: midnightblue;
+  text-decoration: underline;
 }
-.instagram-logo{
-  width: 60px;
-  height: 60px;
-}
-/*****************************************************************************************************/
-.drop-down-1{
+/*=============================Banner=============================*/
+.banner {
+  position: relative;
+  width: 100%;
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
+  text-align: center;
+  overflow: hidden;
+}
+
+.banner-video {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  z-index: -1;
+  transform: translate(-50%, -50%);
+}
+
+.banner::before {
+  content: "";
+  position: absolute;
+  display: block;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+.banner-text-item {
+  position: relative;
+  width: 100%;
+  text-align: center;
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
+}
+
+.banner-heading {
+  flex: 1;
+}
+
+.banner-heading h1 {
+  font-size: 80px;
+  font-weight: normal;
+  color: #00FFC2;
+  font-family: "Poetsen One", sans-serif;
+}
+
+.banner-text-item .form {
+  flex: 1;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(255, 255, 255, 0.2);
+  border-radius: 5px;
+  width: 70%;
+  padding: 1% 2%;
+}
+
+.banner-text-item input,
+.banner-text-item .date,
+.banner-text-item .book {
+  padding: 15px;
+  margin-right: 10px;
+  font-size: 18px;
+  font-family: Roboto;
+  border-radius: 5px;
+  outline: 0;
+  border: none;
+}
+
+.banner-text-item input {
+  width: 50%;
+  flex: 2;
+}
+
+.banner-text-item .date {
   width: 20%;
-  height: 500px;
-  background-color: white;
-  border-right: 5px solid black; 
-  border-left: 5px solid black; 
-  background: linear-gradient(
-      to top, 
-      hsla(52, 25%, 12%, 0.499), 
-      hsla(0, 35%, 42%, 0.685), 
-      hsla(189, 69%, 32%, 0.366),
-      hsla(52, 25%, 12%, 0.499)  
-  );
-  pointer-events: none; 
-  z-index: -1;    
+  flex: 1;
 }
-.hold-drop-down-1{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+
+.banner-text-item .book {
+  width: 20%;
+  flex: 1;
+}
+
+.banner-text-item .book {
+  text-decoration: none;
+  color: #000;
+  text-transform: uppercase;
+  padding: 15px;
+  cursor: pointer;
+  background-color: #00FFC2;
+  font-size: 16px;
+  font-weight: normal;
+  font-family: "Barlow Condensed";
+  width: 20%;
+}
+
+/*===============Footer===================*/
+.footer {
+  background-image: url("https://res.cloudinary.com/dxssqb6l8/image/upload/v1605293781/pine-tree_mq2sgp.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
   width: 100%;
-  height: 100%; 
-}
-.drop-down-2{
+  height: 670px;
+  position: relative;
   display: flex;
+  flex-flow: row wrap;
   justify-content: center;
   align-items: center;
-  width: 50%;
-  height: 500px;
-  background-color: white;
-  border-right: 5px solid black; 
-  border-left: 5px solid black; 
-  background: linear-gradient(
-      to top, 
-      hsla(52, 25%, 12%, 0.499), 
-      hsla(0, 35%, 42%, 0.685), 
-      hsla(189, 69%, 32%, 0.366),
-      hsla(52, 25%, 12%, 0.499)  
-  );
 }
-.hold-drop-down-2{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 100%;
-  height: 100%; 
+
+.footer::before {
+  position: absolute;
+  content: "";
+  display: block;
+  background-color: rgba(0, 0, 36, 0.8);
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
 }
-/*****************************************************************************************************/
-/*login-page*/
-.form-container {
+
+.footer .links {
+  position: relative;
+  color: #fff;
+  flex: 1;
   display: flex;
+  flex-flow: column;
   justify-content: center;
-} 
-
-.form-box {
-  width: 50%;
-  height: 700px;
-  background-color: #DB5461;
-  margin-top: 3%;
-  margin-bottom: 3%;
-  border-radius: 5%;
-  border: 2px solid white;
-  opacity: 95%;
+  align-items: center;
 }
 
-.login-introduction {
-  font-family: "Poetsen One", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-  color: white;
-  font-size: 100px;
-  margin-bottom: -12.5%;
-  margin-left: 12.5%;
+.links ul {
+  list-style-type: none;
 }
 
-.email-box {
-  display: flex;
-  margin-top: 15%;
-  margin-left: 12.5%;
-  border: none;
-  outline: none;
-  padding: 3% 23%;
-  border-radius: 30px;
-  font-family: "Poetsen One", sans-serif;
-  color: white;
-  font-size: 25px;
+.links h3 {
+  font-family: Barlow Condensed;
+  font-weight: normal;
+  font-size: 23px;
+  margin-bottom: 15px;
 }
 
-.password-box {
-  display: flex;
-  margin-top: 5%;
-  margin-left: 12.5%;
-  border: none;
-  outline: none;
-  padding: 3% 23%;
-  border-radius: 30px;
-  font-family: "Poetsen One", sans-serif;
-  color: white;
-  font-size: 25px;
+.links li {
+  font-family: Roboto;
+  cursor: pointer;
+  padding: 15px 0;
+}
+
+.links li:hover {
+  color: #ffa801;
+}
+
+/*==========================Responsive=============================*/
+@media all and (max-width: 1172px) {
+  .banner-text-item .form {
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+  }
+
+  .banner-text-item .form input,
+  .banner-text-item .form .date,
+  .banner-text-item .form a {
+    flex: 1;
+    margin-bottom: 5px;
+    font-size: 14px;
+  }
+
+  .banner-text-item .form input {
+    width: 60%;
+  }
+
+  .banner-text-item .form .date {
+    width: 30%;
+  }
+
+  .banner-text-item .form .book {
+    width: 10%;
+    font-size: 14px;
+  }
+
+  .banner-heading h1 {
+    font-size: 60px;
+  }
+}
+
+@media all and (max-width: 1414px) {
+  .banner-text-item .form input {
+    width: 40%;
+  }
+
+  .banner-text-item .form .date {
+    width: 30%;
+  }
+
+  .banner-text-item .form .book {
+    width: 20%;
+    font-size: 14px;
+  }
+}
+
+@media all and (max-width: 942px) {
+  .nav-bar {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: auto;
+    text-align: center;
+    position: static;
+  }
+
+  .logo {
+    flex: 1;
+    font-size: 30px;
+    margin: 10px auto;
+    font-family: Satisfy;
+    color: #fde02f;
+  }
+
+  .nav-bar ul {
+    display: none;
+  }
+
+  .nav-bar ul li {
+    flex: 1;
+    margin-bottom: 5px;
+    font-size: 14px;
+  }
+
+  .services {
+    display: flex;
+    flex-flow: column wrap;
+  }
+
+  .services .service-item {
+    flex: 1;
+    margin-bottom: -130px;
+    width: 400px;
+  }
+
+  .places-text {
+    margin-top: 200px;
+  }
+}
+
+@media all and (max-width: 928px) {
+  .banner .form input,
+  a {
+    font-size: 12px;
+  }
+}
+
+@media all and (max-width: 1173px) {
+  .banner .form {
+    background-color: transparent;
+  }
+}
+
+@media all and (max-width: 1194px) {
+  .places .card-box p {
+    font-size: 14px;
+  }
+}
+
+@media all and (max-width: 1086px) {
+  .places .cards .text {
+    line-height: 40px;
+  }
+
+  .cards .text .h2 {
+    font-size: 12px;
+  }
+
+  .cards .img-card img {
+    height: 260px;
+  }
+}
+
+@media all and (max-width: 974px) {
+  .cards {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(6, 1fr);
+    grid-gap: 20px;
+  }
+
+  .card {
+    width: 300px;
+    height: 500px;
+    margin: auto;
+  }
+
+  .cards .text {
+    padding: 5px;
+    font-family: Barlow Condensed;
+  }
+}
+
+@media all and (max-width: 1334px) {
+  .about-img img {
+    width: 300px;
+    height: 500px;
+  }
+}
+
+@media all and (max-width: 1116px) {
+  .about {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .about-img {
+    flex: 1;
+    margin-bottom: 20px;
+  }
+
+  .about-text {
+    flex: 1;
+    margin: auto;
+    text-align: center;
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .about-text h2 {
+    font-size: 35px;
+  }
+
+  .about-img img {
+    width: 400px;
+    height: 400px;
+  }
+}
+
+@media all and (max-width: 708px) {
+  .footer {
+    width: 100%;
+    height: 670px;
+    position: relative;
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    align-items: center;
+  }
 }
