--- a/CSS/style.css
+++ b/CSS/style.css
@@ -197,13 +197,22 @@ ul.menu {
 /*=============================Booking=============================*/
 .booking .book-form{
   padding: 2rem;
-  background: var(--light-bg);
+  background: rgba(255, 255, 255, 0.411);
+  border-radius: 30px;
 }
 
 .booking .book-form .flex{
   display: flex; 
   flex-wrap: wrap; 
   gap: 2rem;
+}
+
+.input{
+  border-radius: 10px;
+}
+
+.inputbox{
+  font-family: "Poetsen One", sans-serif;
 }
 
 .booking .book-form .flex .inputbox{
@@ -235,7 +244,7 @@ ul.menu {
 }
 
 .booking .book-form .btn{
-  margin-top: 0px;
+  margin-top: 50px;
 }
 
 .btn{
@@ -246,6 +255,8 @@ ul.menu {
   font-size: 1.7rem;
   padding: 1rem 3rem;
   cursor: pointer;
+  border-radius: 10px;
+  font-family: "Poetsen One", sans-serif;
 }
 .btn:hover{
   background-color: #00FFC2;
@@ -258,7 +269,10 @@ ul.menu {
   text-transform: uppercase;
   color: #00FFC2;
   font-family: "Poetsen One", sans-serif;
+  animation: fadeIn .6s linear backwards .6s;
+  -webkit-text-stroke: black 0.5px;
 }
+
 @keyframes fadeIn {
   0%{
     transform: scale(0);
