--- a/CSS/index.css
+++ b/CSS/index.css
@@ -406,10 +406,36 @@ footer{
 
 /*over ons home pag*/
 .over-ons-home {
-    padding-left: 10%;
+    padding-left: 5%;
+    padding-right: 5%;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     height: 506px;
-    width: 100%;
+    width: 90%;
     background-color: #E3F2FD;
+}
+
+.about-img-row {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+}
+
+.base-h1 {
+    font-size: 30pt;
+    font-family: "Raleway";
+    margin-bottom: 0;
+}
+
+.base-p {
+    margin-top: 0;
+    font-family: "Raleway";
+    font-size: 32pt;
+}
+
+.arrow-img {
+    width: 50px;
+    height: 50px;
+    margin-bottom: 3%;
 }
