--- a/CSS/index.css
+++ b/CSS/index.css
@@ -312,13 +312,13 @@ footer{
 }
 /*****************************************************************************************************/
 /*login-page*/
-.form-container {
+.login-form-container {
     display: flex;
     justify-content: center;
     margin-bottom: 3%;
 } 
 
-.form-box {
+.login-form-box {
     width: 40%;
     height: 90%;
     background-color: #DB5461;
@@ -329,14 +329,14 @@ footer{
     opacity: 95%;
 }
 
-.introduction-box {
+.login-introduction-box {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
-.introduction-text-top {
+.login-introduction-text-top {
     font-family: "Poetsen One", sans-serif;
     font-weight: 400;
     font-style: normal;
@@ -346,7 +346,7 @@ footer{
     margin-bottom: 0%;
 }
 
-.introduction-text-bottom {
+.login-introduction-text-bottom {
     font-family: "Poetsen One", sans-serif;
     font-weight: 400;
     font-style: normal;
@@ -356,14 +356,14 @@ footer{
     margin-bottom: 0%;
 }
 
-.form {
+.login-form {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
-.email-box {
+.login-name-box {
     display: flex;
     margin-top: 5%;
     width: 70%;
@@ -375,7 +375,7 @@ footer{
     font-size: 150%;
 }
 
-.password-box {
+.login-password-box {
     display: flex;
     margin-top: 5%;
     width: 70%;
@@ -387,14 +387,26 @@ footer{
     font-size: 150%;
 }
 
-.button-box {
+.login-button-box {
     display: flex;
     justify-content: space-around;
     width: 100%;
     margin-top: 5%;
 }
 
-.submit-button {
+.login-signup-button {
+    background-color: white;
+    color: black;
+    text-decoration: none;
+    font-family: "Poetsen One", sans-serif;
+    font-size: 150%;
+    border: none;
+    outline: none;
+    padding: 3% 10%;
+    border-radius: 30px;
+}
+
+.login-submit-button {
     font-family: "Poetsen One", sans-serif;
     font-size: 150%;
     border: none;
@@ -403,7 +415,77 @@ footer{
     border-radius: 30px;
 }
 /*****************************************************************************************************/
+/*signup-page*/
+.signup-form-container {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 3%;
+} 
 
+.signup-form-box {
+    width: 40%;
+    height: 90%;
+    background-color: #DB5461;
+    margin-top: 3%;
+    margin-bottom: 3%;
+    border-radius: 5%;
+    border: 2px solid white;
+    opacity: 95%;
+}
+
+.signup-introduction-box {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.signup-introduction-text {
+    font-family: "Poetsen One", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    color: white;
+    font-size: 500%;
+    margin-top: 10%;
+    margin-bottom: 5%;
+}
+
+.signup-form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.signup-input-box {
+    display: flex;
+    margin-top: 5%;
+    width: 70%;
+    border: none;
+    outline: none;
+    padding: 3% 3%;
+    border-radius: 30px;
+    font-family: "Poetsen One", sans-serif;
+    font-size: 150%;
+}
+
+.signup-button-box {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+    margin-top: 5%;
+}
+
+.signup-submit-button {
+    font-family: "Poetsen One", sans-serif;
+    font-size: 150%;
+    border: none;
+    outline: none;
+    padding: 3% 10%;
+    border-radius: 30px;
+}
+
+/*****************************************************************************************************/
 /*over ons home pag*/
 .over-ons-home {
     padding-left: 5%;
