privacy.php & ToS.php added and working on contact.php

--- a/CSS/cookie.css
+++ b/CSS/cookie.css
@@ -197,11 +197,15 @@ footer{
 }
 
 .privacy{
+    color: black;
+    text-decoration: none;
     display: flex;
     width: 90px;
 }
 
 .terms-of-service{
+    color: black;
+    text-decoration: none;
     display: flex;
     width: 200px;
     cursor: pointer;
