--- a/CSS/index.css
+++ b/CSS/index.css
@@ -199,9 +199,13 @@ footer{
     padding: 10px;
 }
 .contact-button{
-    cursor: pointer;
+    color: black;
+    text-decoration: none;
+    display: flex;
     width: 200px;
+    cursor: pointer;
 }
+
 .hold-footer{
     display: flex;
     justify-content: center;
@@ -232,11 +236,15 @@ footer{
 }
 
 .privacy{
+    color: black;
+    text-decoration: none;
     display: flex;
     width: 90px;
 }
 
 .terms-of-service{
+    color: black;
+    text-decoration: none;
     display: flex;
     width: 200px;
     cursor: pointer;
@@ -564,4 +572,65 @@ footer{
     font-weight: 400;
     font-size: 30pt;
     margin-bottom: 0px;
+}
+
+.zoek-bar {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    width: 100%;
+    height: 108px;
+    background-color: #DB5461;
+}
+
+/*contact page*/
+.contact-container {
+    max-width: 600px;
+    margin: 50px auto;
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+h1 {
+    text-align: center;
+    color: #333;
+}
+
+.form-group {
+    margin-bottom: 15px;
+}
+
+label {
+    display: block;
+    margin-bottom: 5px;
+    color: #555;
+}
+
+input[type="text"],
+input[type="email"],
+textarea {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    font-size: 16px;
+    color: #333;
+}
+
+button {
+    width: 100%;
+    padding: 10px;
+    background-color: #5cb85c;
+    border: none;
+    border-radius: 4px;
+    font-size: 16px;
+    color: #fff;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #4cae4c;
 }
