--- a/CSS/index.css
+++ b/CSS/index.css
@@ -623,7 +623,7 @@ textarea {
 button {
     width: 100%;
     padding: 10px;
-    background-color: #5cb85c;
+    background-color: #00FFC2;
     border: none;
     border-radius: 4px;
     font-size: 16px;
@@ -632,5 +632,14 @@ button {
 }
 
 button:hover {
-    background-color: #4cae4c;
+    background-color: #3AFFB8;
+}
+
+.contact-text {
+    font-family: "Raleway";
+    text-decoration: none;
+    font-size: 12pt;
+    margin: 0px;
+    color: black;
+    font-weight: 500;
 }
