--- a/CSS/style.css
+++ b/CSS/style.css
@@ -658,6 +658,7 @@ align-content: stretch;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  align-items: center;
 }
 
 .boeken {
