index css aangepast en gefixed

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -198,7 +198,7 @@ ul.menu {
   color: midnightblue;
   text-decoration: underline;
 }
-/* styles.css */
+/* booking */
 
 .book-form {
   max-width: 80%;
